Fixing some issues caused by memory leaks.  Image rotation should now work from the photo full edit screen.  Cropping is the last photo editing library to complete for this release.

--- a/assets/css/admin/forms.css
+++ b/assets/css/admin/forms.css
@@ -127,3 +127,10 @@
     color: #7a7a7a;
     font-weight: bold;
 }
+
+/* Quick Edit */
+
+#editPhoto .formItem div
+{
+    float: none;
+}
